CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(CacheCache VERSION 0.1.0)

SET(CMAKE_CXX_COMPILER g++)
SET(CMAKE_C_COMPILER gcc)

ADD_COMPILE_OPTIONS(-std=c++11 -o3)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src SRC)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/deps/RW_Mutex/src RWMutexSRC)

ADD_LIBRARY(cachecache SHARED ${SRC} ${RWMutexSRC})
SET_TARGET_PROPERTIES(cachecache PROPERTIES VERSION 0.1 SOVERSION 0)

ADD_LIBRARY(cachecache_static STATIC ${SRC} ${RWMutexSRC})
SET_TARGET_PROPERTIES(cachecache_static PROPERTIES OUTPUT_NAME "cachecache")
