CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(RW_Mutex VERSION 0.1.0)

ADD_COMPILE_OPTIONS(-std=c++11 -o3)
AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR} SRC)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../src)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/../deps/RW_Mutex/src)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../build)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../deps/RW_Mutex/build)

ADD_EXECUTABLE(TEST ${PROJECT_SOURCE_DIR}/test.cpp)
TARGET_LINK_LIBRARIES(TEST libcachecache.a librw_mutex.a -lgtest -lpthread)